bases/go-http-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-http-server
  labels:
    app: go-http-server
spec:
  type: ClusterIP
  selector:
    app: go-http-server
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
