bases/go-http-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-http-server
  labels:
    app: go-http-server
spec:
  ingressClassName: nginx
  rules:
  - host: go-http-server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-http-server
            port:
              number: 80
